Fix missing background images

--- a/static/css/airspace.css
+++ b/static/css/airspace.css
@@ -140,7 +140,7 @@ font header .navbar-default .navbar-nav li a:hover {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  background-position: 10% 0%;
+  background-position: center center;
   padding: 200px 0 280px 0;
   position: relative;
 }
